<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.mycompany.testimageurl.ConvectiveActivity">

    <Button
        android:textSize="15sp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_send14"
        android:onClick="openconv1"
        />

    <Button
        android:textSize="15sp"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginTop="10dp"
    android:text="@string/button_send15"
    android:onClick="openconv2"
    />

    <Button
        android:textSize="15sp"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginTop="10dp"
    android:text="@string/button_send16"
    android:onClick="openconv3"
    />

    <Button
        android:textSize="15sp"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginTop="10dp"
    android:text="@string/button_send17"
    android:onClick="openconv4t8"
    />

</LinearLayout>
