<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send2"
        android:onClick="displayradarf"
        />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send24"
        android:onClick="displaytempf"
        />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send25"
        android:onClick="displaywindf"
        />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send26"
        android:onClick="displayaccprecipf"
        />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send5"
        android:onClick="displayGIF"
        />


</LinearLayout>
