<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send23"
        android:onClick="gotoModels"
        />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send7"
        android:onClick="openconvective"
        />

    <Button
        android:textSize="15sp"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_send8"
        android:onClick="openstormlist"
        />



</LinearLayout>