<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <WebView android:id="@+id/webview8"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_marginTop="25dp"
            android:text="@string/button_send9"
            android:onClick="displayChart1"
            />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_marginTop="25dp"
            android:text="@string/button_send10"
            android:onClick="displayChart2"
            />
    </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_marginTop="5dp"
                android:text="@string/button_send11"
                android:onClick="displayChart3"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_marginTop="5dp"
                android:text="@string/button_send12"
                android:onClick="displayChart4"
                />

    </LinearLayout>
</LinearLayout>
